2011-07-18  Ulrich Drepper  <drepper@gmail.com>

	* po/nl.po: Update from translation team.
	* po/sv.po: Likewise.

2011-07-16  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/i386/Makefile: Never use -mpreferred-stack-boundary=2,
	now disallowed by GCC.

	* configure.in (use-default-link): Default to yes if a test -shared
	link meets our qualifications.
	* configure: Regenerated.

	* config.make.in (output-format): New variable.
	* configure.in: Check for ld --print-output-format support.
	* configure: Regenerated.
	* Makerules ($(common-objpfx)format.lds)
	[$(output-format) != unknown]: Just use $(output-format),
	instead of the linker-script munging.

2011-07-14  Roland McGrath  <roland@hack.frob.com>

	* Makefile ($(common-objpfx)linkobj/libc.so): Use $(shlib-lds) instead
	of $(common-objpfx)shlib.lds.
	* elf/Makefile ($(objpfx)sotruss-lib.so): Likewise.

	* sysdeps/i386/i686/multiarch/strstr-c.c (libc_hidden_builtin_def):
	Conditionalize redefinition on [SHARED && DO_VERSIONING && !NO_HIDDEN].

	* configure.in (-z relro check): Adjust test code to add a large
	writable data section after it.
	* configure: Regenerated.

2011-07-11  Roland McGrath  <roland@hack.frob.com>

	* configure.in (-z relro check): Fix test code to make the variable
	truly const.
	* configure: Regenerated.

2011-07-11  Ulrich Drepper  <drepper@gmail.com>

	* nscd/nscd.h (struct traced_file): Define.
	(struct database_dyn): Remove inotify_descr, reset_res, and filename
	elements.  Add traced_files.
	(inotify_fd): Declare.
	(register_traced_file): Declare.
	* nscd/connections.c (dbs): Remove reset_res and filename initializers.
	(inotify_fd): Export.
	(resolv_conf_descr): Remove.
	(nscd_init): Move inotify descriptor creation to main.
	Don't register files for notification here.
	(register_traced_file): New function.
	(invalidate_cache): Don't use reset_res to determine whether to call
	res_init, go through the list of registered files.